fix: fix and enhance
